Fixed broken layout on media chooser. Set missing minimum width on the content bar.

--- a/thunderchild/static/thunderchild/css_src/entries.less
+++ b/thunderchild/static/thunderchild/css_src/entries.less
@@ -19,19 +19,6 @@
     }
   }
 }
-#media_chooser_modal {
-  width:970px;
-  height:620px;
-  margin:-350px 0 0 -485px;
-  .modal-body {
-    max-height:none;
-    iframe {
-      width:940px;
-      height:535px;
-      border:none;
-    }
-  }
-}
 #textarea-modal {
   width:970px;
   height:620px;
