--- a/thunderchild/static/thunderchild/css_src/media.less
+++ b/thunderchild/static/thunderchild/css_src/media.less
@@ -62,8 +62,22 @@ ul {
     }
   }
 }
+#media_chooser_modal {
+  width:952px;
+  height:640px;
+  margin:-320px 0 0 -476px;
+  .modal-body {
+    max-height:none;
+    iframe {
+      width:922px;
+      height:555px;
+      border:none;
+    }
+  }
+}
 #media_chooser_thumbnails_list {
   height:439px;
+  margin-left:-2%;
   li {
     .thumbnail {
       height:130px;
