--- a/thunderchild/static/thunderchild/css_src/thunderchild.less
+++ b/thunderchild/static/thunderchild/css_src/thunderchild.less
@@ -197,6 +197,7 @@ a {
   top:35px;
   width:100%;
   z-index:1;
+  min-width:940px;
   .box-shadow(0px 1px 4px 0px rgba(0, 0, 0, 0.15));
   background:@actionBarBackgroundColor;
   .breadcrumbs-bar {
